packages/runners/swc-plugin-runners/tests/errors/misplaced-directive-function/output.js
export async function myRunner(ctx) {
  const x = 1;
  return { name: "test", status: "pass" };
}

